--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_games_list">GamesList</string>
+
+    <string-array name="game_types">
+        <item>Basketball</item>
+        <item>Football</item>
+        <item>Tennis</item>
+        <item>Volleyball</item>
+
+    </string-array>
 </resources>
