--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_games_list">GamesList</string>
 
+    <string name="title_activity_maps">MapsActivity</string>
     <string-array name="game_types">
         <item>Basketball</item>
         <item>Football</item>
